[package]
name = "directory-history"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.2"
tokio = { version = "1.17.0", features = ["full"] }
anyhow = "1.0.56"
async-recursion = "1.0.0"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
log = "0.4.16"
custom-utils = { version = "0.8"}
hex = "0.4.3"
clap = {version="3.1", features = ["derive"]}
structopt = "0.3"

